Bug 1216248 - Recomposite when the window overlay changes. r=mattwoodrow

--HG--
extra : commitid : JX5QiGz9HSG
extra : rebase_source : 7330073386d25c112cf1c0056383520a0bcf0e0b
extra : amend_source : 66cc16e8ad0ca361c3f9c25814d00ec5df4b169d