gfx/layers/composite/LayerManagerComposite.cpp
@@ -121,6 +121,7 @@ LayerManagerComposite::LayerManagerComposite(Compositor* aCompositor)
 , mDebugOverlayWantsNextFrame(false)
 , mGeometryChanged(true)
 , mLastFrameMissedHWC(false)
+, mWindowOverlayChanged(false)
 {
   mTextRenderer = new TextRenderer(aCompositor);
   MOZ_ASSERT(aCompositor);
@@ -339,7 +340,7 @@ LayerManagerComposite::UpdateAndRender()
   // Update cached layer tree information.
   mClonedLayerTreeProperties = LayerProperties::CloneFrom(GetRoot());
 
-  if (invalid.IsEmpty()) {
+  if (invalid.IsEmpty() && !mWindowOverlayChanged) {
     // Composition requested, but nothing has changed. Don't do any work.
     return;
   }
@@ -360,6 +361,7 @@ LayerManagerComposite::UpdateAndRender()
   RenderToPresentationSurface();
 #endif
   mGeometryChanged = false;
+  mWindowOverlayChanged = false;
 }
 
 already_AddRefed<DrawTarget>
